@@ -9,6 +9,7 @@ javax.faces.application.CONFIG_FILES was changed to the spec-compliant
 javax.faces.CONFIG_FILES. You have to modify your web.xml accordingly,
 otherwise your config files will no longer be found and parsed.
 
+* new renderedIfEmpty attribute for extended <x:dataTable> component (see tlddocs)
 * bug #953783	h:commandLink renders value as text
 * bug #955135	graphicImage tag
 * bug #952453	Class FacesConfigFactoryBase search for wrong context-param
